--- a/templates/base.html
+++ b/templates/base.html
@@ -19,73 +19,13 @@
         crossorigin="anonymous">
   </head>
   <body>
+    {% include 'includes/header.html' %}
     <main>
       {% block content %} 
       {% endblock content %}
     </main>
-    <!-- Footer -->
-    <footer class="text-center bg-body-tertiary">
-      <!-- Grid container -->
-      <div class="container pt-4">
-        <!-- Section: Social media -->
-        <section class="mb-4">
-          <!-- Github -->
-          <a
-            data-mdb-ripple-init
-            class="btn btn-floating text-white m-1"
-            href="https://github.com/VCGithubCode/prideful-programmers"
-            target="_blank"
-            role="button"
-            style="background-color: #333333;"
-            ><i class="fab fa-github"></i
-          ></a>
-
-          <!-- Facebook -->
-          <a
-            data-mdb-ripple-init
-            class="btn btn-floating text-body m-1"            
-            href="https://www.facebook.com/"
-            target="_blank"
-            role="button"
-            style="background-color: #55acee;"
-            ><i class="fab fa-facebook-f"></i
-          ></a>
-
-          <!-- Instagram -->
-          <a
-            data-mdb-ripple-init
-            class="btn btn-floating text-body m-1"            
-            href="https://www.instagram.com/"
-            target="_blank"
-            role="button"
-            style="background-color: #ac2bac;"
-            data-mdb-ripple-color="dark"
-            ><i class="fab fa-instagram"></i
-          ></a>
-    
-          <!-- Twitter -->
-          <a
-            data-mdb-ripple-init
-            class="btn btn-floatingtext-body m-1"            
-            href="https://twitter.com/"
-            target="_blank"
-            role="button"
-            style="background-color: #55acee;"
-            data-mdb-ripple-color="dark"
-            ><i class="fab fa-twitter"></i
-          ></a>          
-        </section>
-        <!-- Section: Social media -->
-      </div>
-      <!-- Grid container -->
-    
-      <!-- Copyright -->
-      <div class="text-center p-3">
-        © 2024 Copyright:
-        <a class="text-body" href="#!">Inclusive Spots</a>
-      </div>
-      <!-- Copyright -->
-    </footer>
-	<script src="index.js"></script>
+    {% include 'includes/footer.html' %}
+    <script src='https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js'></script>
+    <script defer src="index.js"></script>
   </body>
 </html>
