--- a/home/templates/index.html
+++ b/home/templates/index.html
@@ -1,7 +1,66 @@
 {% extends "base.html" %} 
-
+{% load static %}
 {% block content %}
 
-<h1>Placeholder</h1>
+<!-- Page Content -->
+<div class="container px-4 px-lg-5">
+    <!-- Heading Row -->
+    <div class="row gx-4 gx-lg-5 align-items-center my-5">
+        <div class="col-lg-7">
+            <img class="img-fluid rounded mb-4 mb-lg-0" src="https://images.pexels.com/photos/1173576/pexels-photo-1173576.jpeg?auto=compress&cs=tinysrgb&w=600" alt="Hand holding a rainbow coloured wooden heart against a blue sky.">
+        </div>
+        <div class="col-lg-5">
+            <h1 class="font-weight-light">Inclusive Spots</h1>
+            <p>Inclusive Spots aims to be the leading global resource for the LGBTQIA+ community, providing trusted, up-to-date information on safe spaces where every individual can feel accepted, respected, and celebrated. We envision a world where LGBTQIA+ individuals can freely explore and engage with their communities without fear, knowing there is access to safe, inclusive, and supportive environments.</p>
+            <a class="btn btn-primary" href="#!">Meet the team</a>
+        </div>
+    </div>
+
+    <!-- Call to Action -->
+    <div class="card text-white bg-secondary my-5 py-4 text-center">
+        <div class="card-body">
+            <p class="text-white m-0">Find Your Safe Haven</p>
+        </div>
+    </div>
+
+    <!-- Content Row -->
+    <div class="row gx-4 gx-lg-5">
+        <div class="col-md-4 mb-5">
+            <div class="card h-100">
+                <div class="card-body">
+                    <h2 class="card-title">Cafés</h2>
+                    <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rem magni quas ex numquam, maxime minus quam molestias corporis quod, ea minima accusamus.</p>
+                </div>
+                <div class="card-footer">
+                    <a class="btn btn-primary btn-sm" href="#!">More Info</a>
+                </div>
+            </div>
+        </div>
+
+        <div class="col-md-4 mb-5">
+            <div class="card h-100">
+                <div class="card-body">
+                    <h2 class="card-title">Bars &amp; Clubs </h2>
+                    <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod tenetur ex natus at dolorem enim! Nesciunt pariatur voluptatem sunt quam eaque, vel, non in id dolore voluptates quos eligendi labore.</p>
+                </div>
+                <div class="card-footer">
+                    <a class="btn btn-primary btn-sm" href="#!">More Info</a>
+                </div>
+            </div>
+        </div>
+
+        <div class="col-md-4 mb-5">
+            <div class="card h-100">
+                <div class="card-body">
+                    <h2 class="card-title">Support Centers</h2>
+                    <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rem magni quas ex numquam, maxime minus quam molestias corporis quod, ea minima accusamus.</p>
+                </div>
+                <div class="card-footer">
+                    <a class="btn btn-primary btn-sm" href="#!">More Info</a>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
 
 {% endblock %}
