--- a/templates/includes/header.html
+++ b/templates/includes/header.html
@@ -2,7 +2,7 @@
 <header>
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container px-5">
-        <a class="navbar-brand" href="#!">Start Bootstrap</a>
+        <a class="navbar-brand" href="./">Inclusive Spots</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -12,13 +12,13 @@
                     <a class="nav-link active" aria-current="page" href="#!">Home</a>
                 </li>
                 <li class="nav-item">
+                    <a class="nav-link" href="#!">Venues</a>
+                </li>
+                <li class="nav-item">
                     <a class="nav-link" href="#!">About</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#!">Contact</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#!">Services</a>
                 </li>
             </ul>
         </div>
