Add description to venue cards for the landing page.

--- a/home/templates/index.html
+++ b/home/templates/index.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %} 
+{% extends "base.html" %}
 {% load static %}
 {% block content %}
 
@@ -7,11 +7,16 @@
     <!-- Heading Row -->
     <div class="row gx-4 gx-lg-5 align-items-center my-5">
         <div class="col-lg-7">
-            <img class="img-fluid rounded mb-4 mb-lg-0" src="https://images.pexels.com/photos/1173576/pexels-photo-1173576.jpeg?auto=compress&cs=tinysrgb&w=600" alt="Hand holding a rainbow coloured wooden heart against a blue sky.">
+            <img class="img-fluid rounded mb-4 mb-lg-0"
+                src="https://images.pexels.com/photos/1173576/pexels-photo-1173576.jpeg?auto=compress&cs=tinysrgb&w=600"
+                alt="Hand holding a rainbow coloured wooden heart against a blue sky.">
         </div>
         <div class="col-lg-5">
             <h1 class="font-weight-light">Inclusive Spots</h1>
-            <p>Inclusive Spots aims to be the leading global resource for the LGBTQIA+ community, providing trusted, up-to-date information on safe spaces where every individual can feel accepted, respected, and celebrated. We envision a world where LGBTQIA+ individuals can freely explore and engage with their communities without fear, knowing there is access to safe, inclusive, and supportive environments.</p>
+            <p>Inclusive Spots aims to be the leading global resource for the LGBTQIA+ community, providing trusted,
+                up-to-date information on safe spaces where every individual can feel accepted, respected, and
+                celebrated. We envision a world where LGBTQIA+ individuals can freely explore and engage with their
+                communities without fear, knowing there is access to safe, inclusive, and supportive environments.</p>
             <a class="btn btn-primary" href="#!">Meet the team</a>
         </div>
     </div>
@@ -29,7 +34,9 @@
             <div class="card h-100">
                 <div class="card-body">
                     <h2 class="card-title">Cafés</h2>
-                    <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rem magni quas ex numquam, maxime minus quam molestias corporis quod, ea minima accusamus.</p>
+                    <p class="card-text">Discover a vibrant selection of LGBTQIA+ friendly cafes, each offering a unique
+                        and inclusive atmosphere for all. If you're searching for a cozy spot to read a book, a lively place to meet friends, or a safe
+                        space to express yourself, there is something for everyone to enjoy.</p>
                 </div>
                 <div class="card-footer">
                     <a class="btn btn-primary btn-sm" href="#!">More Info</a>
@@ -41,7 +48,9 @@
             <div class="card h-100">
                 <div class="card-body">
                     <h2 class="card-title">Bars &amp; Clubs </h2>
-                    <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod tenetur ex natus at dolorem enim! Nesciunt pariatur voluptatem sunt quam eaque, vel, non in id dolore voluptates quos eligendi labore.</p>
+                    <p class="card-text">Explore the vibrant nightlife of London with our selection of LGBTQIA+ friendly
+                        bars and clubs. These venues are not just places to enjoy a drink or dance the night away—they
+                        are community hubs where diversity is celebrated and everyone is welcome.</p>
                 </div>
                 <div class="card-footer">
                     <a class="btn btn-primary btn-sm" href="#!">More Info</a>
@@ -53,7 +62,9 @@
             <div class="card h-100">
                 <div class="card-body">
                     <h2 class="card-title">Support Centers</h2>
-                    <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rem magni quas ex numquam, maxime minus quam molestias corporis quod, ea minima accusamus.</p>
+                    <p class="card-text">LGBTQIA+ support services offer vital resources and safe spaces for individuals
+                        seeking assistance, community, and empowerment. These organizations are dedicated to providing
+                        compassionate and professional support tailored to the unique needs of the community.</p>
                 </div>
                 <div class="card-footer">
                     <a class="btn btn-primary btn-sm" href="#!">More Info</a>
