Change button name

--- a/home/templates/index.html
+++ b/home/templates/index.html
@@ -17,7 +17,7 @@
                 up-to-date information on safe spaces where every individual can feel accepted, respected, and
                 celebrated. We envision a world where LGBTQIA+ individuals can freely explore and engage with their
                 communities without fear, knowing there is access to safe, inclusive, and supportive environments.</p>
-            <a class="btn btn-primary" href="#!">Meet the team</a>
+            <a class="btn btn-primary" href="#!">Explore venues</a>
         </div>
     </div>
 
