footer: adjusted content in the footer

--- a/templates/includes/footer.html
+++ b/templates/includes/footer.html
@@ -1,64 +1,66 @@
 {% load static %}
-    <!-- Footer -->
-    <footer class="text-center bg-body-tertiary">
-      <!-- Grid container -->
-      <div class="container pt-4">
-        <!-- Section: Social media -->
-        <section class="mb-4">
+<!-- Footer -->
+<footer class="text-center bg-body-tertiary", style="background-color: #e5e5e5;">
+  <!-- Grid container -->
+  <div class="container pt-4">
+      <!-- Section: Social media -->
+      <section class="mb-2">
           <!-- Github -->
           <a
-            data-mdb-ripple-init
-            class="btn btn-floating text-white m-1"
-            href="https://github.com/VCGithubCode/prideful-programmers"
-            target="_blank"
-            role="button"
-            style="background-color: #333333;"
-            ><i class="fab fa-github"></i
+              data-mdb-ripple-init
+              class="btn btn-floating text-white m-1"
+              href="https://github.com/VCGithubCode/prideful-programmers"
+              target="_blank"
+              role="button"
+              style="background-color: #333333;"
+              ><i class="fab fa-github"></i
           ></a>
 
           <!-- Facebook -->
           <a
-            data-mdb-ripple-init
-            class="btn btn-floating text-body m-1"            
-            href="https://www.facebook.com/"
-            target="_blank"
-            role="button"
-            style="background-color: #55acee;"
-            ><i class="fab fa-facebook-f"></i
+              data-mdb-ripple-init
+              class="btn btn-floating text-body m-1"            
+              href="https://www.facebook.com/"
+              target="_blank"
+              role="button"
+              style="background-color: #55acee;"
+              ><i class="fab fa-facebook-f"></i
           ></a>
 
           <!-- Instagram -->
           <a
-            data-mdb-ripple-init
-            class="btn btn-floating text-body m-1"            
-            href="https://www.instagram.com/"
-            target="_blank"
-            role="button"
-            style="background-color: #ac2bac;"
-            data-mdb-ripple-color="dark"
-            ><i class="fab fa-instagram"></i
+              data-mdb-ripple-init
+              class="btn btn-floating text-body m-1"            
+              href="https://www.instagram.com/"
+              target="_blank"
+              role="button"
+              style="background-color: #ac2bac;"
+              data-mdb-ripple-color="dark"
+              ><i class="fab fa-instagram"></i
           ></a>
-    
+
           <!-- Twitter -->
           <a
-            data-mdb-ripple-init
-            class="btn btn-floatingtext-body m-1"            
-            href="https://twitter.com/"
-            target="_blank"
-            role="button"
-            style="background-color: #55acee;"
-            data-mdb-ripple-color="dark"
-            ><i class="fab fa-twitter"></i
+              data-mdb-ripple-init
+              class="btn btn-floating text-body m-1"            
+              href="https://twitter.com/"
+              target="_blank"
+              role="button"
+              style="background-color: #55acee;"
+              data-mdb-ripple-color="dark"
+              ><i class="fab fa-twitter"></i
           ></a>          
-        </section>
-        <!-- Section: Social media -->
-      </div>
-      <!-- Grid container -->
-    
-      <!-- Copyright -->
-      <div class="text-center p-3">
-        © 2024 Copyright:
-        <a class="text-body" href="#!">Inclusive Spots</a>
-      </div>
-      <!-- Copyright -->
-    </footer>
+      </section>
+      <!-- Section: Social media -->
+  </div>
+  <!-- Grid container -->
+  <hr class="w-75 mx-auto">
+  <!-- Copyright -->
+  <div class="text-center mt-0">
+    © 2024 <a class="text-body" href="#!">Inclusive Spots</a>
+    <p class="mb-0">Created for educational purposes only</p>
+    <p class="mb-0">Project created as part of Code Institute's July/2024 hackathon participation</p>
+  </div>
+  <!-- Copyright -->
+</footer>
+  
