chore: add logo image

--- a/templates/includes/header.html
+++ b/templates/includes/header.html
@@ -1,7 +1,9 @@
 {% load static %}
+
 <header>
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+<nav class="navbar navbar-expand-lg custom-navbar" style="background-color: #6010a6;">
     <div class="container px-5">
+        <img class="me-3" src="{% static 'images/white-logo.png' %}" width="35">
         <a class="navbar-brand" href="./">Inclusive Spots</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
