--- a/templates/base.html
+++ b/templates/base.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Inclusive Spots</title>
-    <link rel="stylesheet" href="static/css/style.css">
+    <link rel="stylesheet" href="{% static 'css/style.css' %}">
     <!-- Fontawesome - Script -->
     <script src="https://kit.fontawesome.com/c3c0f5e49e.js" crossorigin="anonymous">
     </script>
