--- a/templates/includes/header.html
+++ b/templates/includes/header.html
@@ -2,16 +2,17 @@
 
 <header>
 <nav class="navbar navbar-expand-lg custom-navbar" style="background-color: #6010a6;">
-    <div class="container px-5">
-        <img class="me-3" src="{% static 'images/white-logo.png' %}" width="35">
-        <a class="navbar-brand" href="./">Inclusive Spots</a>
+    <div class="container-fluid px-5">
+        <a class="navbar-brand" href="{% url 'home' %}">
+            <img class="me-3" src="{% static 'images/white-logo.png' %}" alt="Logo" width="30" height="24" class="d-inline-block align-text-top">Inclusive Spots
+        </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
+            <i class="fas fa-bars"></i>
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                 <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#!">Home</a>
+                    <a class="nav-link active" aria-current="page" href="{% url 'home' %}">Home</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#!">Venues</a>
