chore: remove copyright from footer adjust text order

--- a/templates/includes/footer.html
+++ b/templates/includes/footer.html
@@ -57,9 +57,9 @@
   <hr class="w-75 mx-auto">
   <!-- Copyright -->
   <div class="text-center mt-0">
-    © 2024 <a class="text-body" href="{% url 'home' %}">Inclusive Spots</a>
-    <p class="mb-0">Created for educational purposes only</p>
-    <p class="mb-0">Project created as part of Code Institute's July/2024 hackathon participation</p>
+    <a class="text-body" href="{% url 'home' %}">Inclusive Spots</a>
+    <p class="mb-0">Project created as part of Code Institute's July 2024 Hackathon participation</p>
+    <p class="mb-0">For educational purposes only</p>
   </div>
   <!-- Copyright -->
 </footer>
