--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,7 +1,6 @@
-@import url('https://fonts.googleapis.com/css2?family=Kalnia+Glaze:wght@100..700&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Kalnia+Glaze:wght@100..700&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 
 /* Defining Global CSS Variables */
-
 :root {
   --primary-color: #6E2170; /* Finn */ 
   --secondary-color: #01556b; /* Midnight Green */ 
@@ -11,9 +10,8 @@
   --light-text: #E5E5E5; /* Platinum */
   --heading-color: #050505; /* Black */
   --button-hover: #355FAA; /* Denim */
-
-    --primary-font: "Roboto", sans-serif;
-    --secondary-font: "Montserrat", sans-serif;
+  --primary-font: "Roboto", sans-serif;
+  --secondary-font: "Montserrat", sans-serif;
 }
 
 /* Global Styles */
@@ -46,16 +44,12 @@ p {
     color: var(--dark-text);
 }
 
-i {
-    font-size: 30px !important;
-    margin-right: 20px;
-}
 
 h2.card-title {
   color: var(--primary-color)
 }
 
-nav .bg-dark .custom-navbar {
+.custom-navbar {
   background-color: #6E2170;
 }
 
@@ -87,4 +81,20 @@ a.btn:hover {
   background-color: var(--button-hover);
 }
 
-/* Global Styles Ends */
+/* Style the Font Awesome hamburger icon */
+.navbar-toggler {
+    border: none;
+    outline: none;
+}
+
+.navbar-toggler i {
+    color: var(--light-text);
+    font-size: 1.5em;
+}
+
+/* Override Bootstrap focus state box-shadow */
+button.navbar-toggler:focus {
+    text-decoration: none;
+    outline: 0;
+    box-shadow: 0 0 0 0.25rem var(--light-text);
+}
