--- a/static/css/style.css
+++ b/static/css/style.css
@@ -12,6 +12,7 @@
   --button-hover: #355FAA; /* Denim */
   --primary-font: "Roboto", sans-serif;
   --secondary-font: "Montserrat", sans-serif;
+  --accent-font: "Kalnia Glaze";
 }
 
 /* Global Styles */
@@ -44,9 +45,19 @@ p {
     color: var(--dark-text);
 }
 
+p.text-white{
+  font-family: var(--accent-font);
+  font-weight: 700;
+  letter-spacing: 0.75em;
+  background: #e5e5e5ea;
+  /* background: #e0dcdcea; */
+  border-radius: 0.25rem;
+  width: max-content;
+  padding: 0 0.5rem
+}
 
 h2.card-title {
-  color: var(--primary-color)
+  color: var(--primary-color);
 }
 
 .custom-navbar {
@@ -98,4 +109,18 @@ button.navbar-toggler:focus {
     text-decoration: none;
     outline: 0;
     box-shadow: 0 0 0 0.25rem var(--light-text);
+}
+
+div.bg-secondary{
+  background-image: url(https://images.pexels.com/photos/673648/pexels-photo-673648.jpeg?auto=compress&cs=tinysrgb&w=600);
+  background-size: cover;
+}
+
+/* div.card.text-white>p{
+  justify-content: center;
+  align-items: center;
+} */
+
+div.card.text-white{
+  align-items: center;
 }
