chore: adjust accent background image

--- a/home/templates/index.html
+++ b/home/templates/index.html
@@ -22,7 +22,7 @@
     </div>
 
     <!-- Call to Action -->
-    <div class="card text-white bg-secondary my-5 py-4 text-center">
+    <div class="card text-white bg-custom my-5 py-4 text-center">
         <div class="card-body">
             <p class="text-white m-0">Find Your Safe Haven</p>
         </div>
