chore: changed middle section of landing page

--- a/home/templates/index.html
+++ b/home/templates/index.html
@@ -24,7 +24,7 @@
     <!-- Call to Action -->
     <div class="card text-white bg-custom my-5 py-4 text-center">
         <div class="card-body">
-            <p class="text-white m-0">Find Your Safe Haven</p>
+            <p class="custom-text m-0">Find Your Safe Haven</p>
         </div>
     </div>
 
@@ -33,7 +33,7 @@
         <div class="col-md-4 mb-5">
             <div class="card h-100">
                 <div class="card-body">
-                    <h2 class="card-title"><i class="fa-solid fa-mug-saucer"></i> Cafés</h2>
+                    <h2 class="card-title">Cafés</h2>
                     <p class="card-text">Discover a vibrant selection of LGBTQIA+ friendly cafes, each offering a unique
                         and inclusive atmosphere for all. If you're searching for a cozy spot to read a book, a lively place to meet friends, or a safe
                         space to express yourself, there is something for everyone to enjoy.</p>
@@ -47,7 +47,7 @@
         <div class="col-md-4 mb-5">
             <div class="card h-100">
                 <div class="card-body">
-                    <h2 class="card-title"><i class="fa-solid fa-heart"></i> Bars &amp; Clubs</h2>
+                    <h2 class="card-title"> Bars &amp; Clubs</h2>
                     <p class="card-text">Explore the vibrant nightlife of London with our selection of LGBTQIA+ friendly
                         bars and clubs. These venues are not just places to enjoy a drink or dance the night away—they
                         are community hubs where diversity is celebrated and everyone is welcome.</p>
