--- a/home/templates/index.html
+++ b/home/templates/index.html
@@ -38,7 +38,7 @@
                         and inclusive atmosphere for all. If you're searching for a cozy spot to read a book, a lively place to meet friends, or a safe
                         space to express yourself, there is something for everyone to enjoy.</p>
                 </div>
-                <div class="card-footer">
+                <div class="card-footer custom-footer">
                     <a class="btn btn-primary btn-sm" href="#!">More Info</a>
                 </div>
             </div>
@@ -52,7 +52,7 @@
                         bars and clubs. These venues are not just places to enjoy a drink or dance the night away—they
                         are community hubs where diversity is celebrated and everyone is welcome.</p>
                 </div>
-                <div class="card-footer">
+                <div class="card-footer custom-footer">
                     <a class="btn btn-primary btn-sm" href="#!">More Info</a>
                 </div>
             </div>
@@ -66,7 +66,7 @@
                         seeking assistance, community, and empowerment. These organizations are dedicated to providing
                         compassionate and professional support tailored to the unique needs of the community.</p>
                 </div>
-                <div class="card-footer">
+                <div class="card-footer custom-footer">
                     <a class="btn btn-primary btn-sm" href="#!">More Info</a>
                 </div>
             </div>
