--- a/static/css/style.css
+++ b/static/css/style.css
@@ -37,10 +37,6 @@ h6 {
     font-weight: 500;
 }
 
-h2 {
-
-}
-
 .font-weight-light {
   color: var(--primary-color);
 }
@@ -122,7 +118,7 @@ div.card.text-white {
     border-radius: 0.25rem;
 }
 
-.card.card-footer{
+div.card-footer.custom-footer {
   background-image: linear-gradient(140deg, #fcf6e6 0%, #06968578 15%, #6e2170c4 60%, #e09101bd 80%, #db1304eb 100%);
 }
 
