--- a/static/css/style.css
+++ b/static/css/style.css
@@ -101,8 +101,10 @@ button.navbar-toggler:focus {
 }
 
 div.bg-custom {
-  background: #ffffff url('/static/images/rainbow-watercolour.png') no-repeat center center fixed;
+  background: #ffffff url('{% static "images/rainbow-watercolour.png" %}') no-repeat center center fixed;
   background-size: cover;
+  width: 100%;
+  height: 100vh;
 }
 
 div.card.text-white {
