feat: Updated "WHO WE ARE" section with rainbow background and centered text

--- a/templates/about.html
+++ b/templates/about.html
@@ -3,9 +3,11 @@
 
 <!-- Page Content -->
 <div class="container mt-3 min-vh-100">
-    <div class="card text-white bg-custom mt-3 py-4 text-center">
-        <div class="card-body">
-            <p class="text-white m-0 p-4">WHO WE ARE</p>
+    <div class="about-us">
+        <div class="container py-5 d-flex justify-content-center align-items-center">
+            <div>
+                <h1 class="fw-bold text-white">WHO WE ARE</h1>
+            </div>        
         </div>
     </div>
 
