--- a/static/css/style.css
+++ b/static/css/style.css
@@ -135,6 +135,12 @@ div.card-footer.custom-footer {
   background-image: linear-gradient(140deg, #fcf6e6 0%, #06968578 15%, #6e2170c4 60%, #e09101bd 80%, #db1304eb 100%);
 }
 
+
+.about-us {
+  background: linear-gradient(to right, #6E2170, #01556b, #E09101, #E5E5E5, #050505, #355FAA);
+}
+
+
 /* Media queries */
 @media (min-width: 1200px) {
   .h2, h2 {
