--- a/static/css/style.css
+++ b/static/css/style.css
@@ -10,9 +10,12 @@
   --light-text: #E5E5E5; /* Platinum */
   --heading-color: #050505; /* Black */
   --button-hover: #355FAA; /* Denim */
+  --navigation: #6010a6; /* Grape */
+
+
+    /* Fonts */
   --primary-font: "Roboto", sans-serif;
   --secondary-font: "Montserrat", sans-serif;
-  --accent-font: "Kalnia Glaze";
 }
 
 /* Global Styles */
@@ -25,6 +28,7 @@
 html,
 body {
     min-height: 100dvh;
+    padding-top: 26px;
 }
 
 h1,
@@ -50,7 +54,7 @@ h2.card-title {
 }
 
 .custom-navbar {
-  background-color: #6E2170;
+  background-color: var(--navigation);
 }
 
 .custom-navbar .nav-link,
@@ -103,17 +107,17 @@ button.navbar-toggler:focus {
 }
 
 div.bg-custom {
-  background: #ffffff url("../images/rainbow-watercolour.png") fixed;
+  background: var(--background-color) url("../images/rainbow-watercolour.png") fixed;
   background-size: cover;
 }
 
 .members{
-  color: #6E2170;
+  color: var(--primary-color);
   font-weight: 600;
 }
 
 .bg-card {
-  background-color: #E5E5E5;
+  background-color: var(--background-color);
 }
 
 .text-justify-custom {
@@ -137,9 +141,14 @@ div.card-footer.custom-footer {
   background-image: linear-gradient(140deg, #fcf6e6 0%, #06968578 15%, #6e2170c4 60%, #e09101bd 80%, #db1304eb 100%);
 }
 
+
 /* Media queries */
 @media (min-width: 1200px) {
   .h2, h2 {
     font-size: 1.7rem;
+  }
+  body {
+    min-height: 100dvh;
+    padding-top: 56px;
   }
 }
