Edit contact page styling, add thank you page

--- a/contact/static/css/contact_style.css
+++ b/contact/static/css/contact_style.css
@@ -1,5 +1,5 @@
 /* Contact page styling */
 
-hr {
+/* hr {
     background-image: linear-gradient(140deg, #fcf6e6 0%, #06968578 15%, #6e2170c4 60%, #e09101bd 80%, #db1304eb 100%);
-}
+} */
