--- a/templates/includes/footer.html
+++ b/templates/includes/footer.html
@@ -13,20 +13,20 @@
         <!-- Section: Social media -->
         <section class="custom-gap mb-0 mt-1">
             <!-- Github -->
-            <a data-mdb-ripple-init class="custom-socialicon-gap btn btn-floating text-white m-1 ms-1"
+            <a data-mdb-ripple-init class="custom-icon-gap icon btn btn-floating text-white m-1 ms-1"
                 href="https://github.com/VCGithubCode/prideful-programmers" target="_blank" role="button"><i
                     class="fab fa-github"></i></a>
 
             <!-- Facebook -->
-            <a data-mdb-ripple-init class="custom-socialicon-gap btn btn-floating text-body m-1 ms-1" href="https://www.facebook.com/"
+            <a data-mdb-ripple-init class="custom-icon-gap icon btn btn-floating text-body m-1 ms-1" href="https://www.facebook.com/"
                 target="_blank" role="button"><i class="fab fa-facebook-f"></i></a>
 
             <!-- Instagram -->
-            <a data-mdb-ripple-init class="custom-socialicon-gap btn btn-floating text-body m-1 ms-1" href="https://www.instagram.com/"
+            <a data-mdb-ripple-init class="custom-icon-gap icon btn btn-floating text-body m-1 ms-1" href="https://www.instagram.com/"
                 target="_blank" role="button" data-mdb-ripple-color="dark"><i class="fab fa-instagram"></i></a>
 
             <!-- Twitter -->
-            <a data-mdb-ripple-init class="custom-socialicon-gap btn btn-floating text-body m-1 ms-1" href="https://twitter.com/" target="_blank"
+            <a data-mdb-ripple-init class="custom-icon-gap icon btn btn-floating text-body m-1 ms-1" href="https://twitter.com/" target="_blank"
                 role="button" data-mdb-ripple-color="dark"><i class="fab fa-twitter"></i></a>
         </section>
         <!-- Section: Social media -->
